added video pausing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br><br>
 
         <button onclick="previousFrame()"><span class="material-icons">skip_previous</span></button>
-        <button onclick="playVideo()"><span class="material-icons">play_arrow</span></button>
+        <button id="playButton" onclick="playVideo()"><span id="playIcon" class="material-icons">play_arrow</span></button>
         <button onclick="nextFrame()"><span class="material-icons">skip_next</span></button>
 
         <p id="frameCounter">Current frame: 0/NAN</p>
