--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
 
     <body onload="pageInit()">
+        <script src="webtrack.js"></script>
+
         <h1>webtrack</h1>
         <input id="vidLoader" type='file' accept="video/*;capture=camcorder" onchange="updateFile()"/>
         <br><br>
@@ -21,7 +23,9 @@
 
         <p id="frameCounter">Current frame: 0/NAN</p>
         
-        <script src="webtrack.js"></script>
-        <video onload="init()" width="70%" id="mainVideo"></video>
+        <div style="position: relative">
+            <video onload="init()" width="70%" id="mainVideo"></video>
+            <canvas onclick="canvasClick()" id="mainCanvas"></canvas>
+        </div>
     </body>
 </html>
