--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <script src="webtrack.js"></script>
 
         <h1>webtrack</h1>
-        <input id="vidLoader" type='file' accept="video/*;capture=camcorder" onchange="updateFile()"/>
+        <input id="vidLoader" type='file' accept="video/*" onchange="updateFile()"/>
         <br><br>
         <button onclick="setStick()" id="setStick">Set calibration stick</button>
-        <button id="addStick">Track point</button>
+        <button onclick="trackPoints()" id="trackPoints">Track points</button>
         <br><br>
 
         <button onclick="previousFrame()"><span class="material-icons">skip_previous</span></button>
@@ -24,7 +24,7 @@
         <p id="frameCounter">Current frame: 0/NAN</p>
         
         <div style="position: relative">
-            <video onload="init()" width="70%" id="mainVideo"></video>
+            <video onload="init()" width="100%" id="mainVideo"></video>
             <canvas onclick="canvasClick()" id="mainCanvas"></canvas>
         </div>
     </body>
