partially fixed scrolling bug ignore this commit

--- a/src/webtrack.html
+++ b/src/webtrack.html
@@ -7,7 +7,7 @@
 
     </head>
 
-    <body onload="pageInit()">
+    <body onload="pageInit()" onscroll="setSizes(); drawShapes()">
         <script src="webtrack.js"></script>
 
         <h1>webtrack</h1>
