--- a/src/webtrack.html
+++ b/src/webtrack.html
@@ -41,5 +41,7 @@
                 <th>V</th>
             </tr>
         </table>
+        <br>
+        <button disabled="true" onclick="exportCSV()" id="exportCSV">Export Data as CSV</button>
     </body>
 </html>
