--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>webtrack - home</title>
         <link rel="stylesheet" href="stylesheet.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" href="assets/logo.png"/>
     </head>
 
     <body>
