--- a/src/webtrack.html
+++ b/src/webtrack.html
@@ -4,6 +4,8 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="webtrack.css">
+        <link rel="icon" type="image/png" href="../assets/logo.png"/>
+
 
     </head>
 
