--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <title>webtrack</title>
 
         <link href="https://unpkg.com/@primer/css@^16.0.0/dist/primer.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css" rel="stylesheet">
 
+        <link rel="stylesheet" href="css/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
@@ -60,13 +61,52 @@
         </section>
 
         <section class="p-6 main-tab" id="trackTab">
-            <video id="mainVideoDisplay">
-                <source id="mainVideoDisplaySource">
-            </video>
+            <div class="blankslate videoMissing" id="videoFinishedSection">
+                <img class="mb-3" src="https://ghicons.github.com/assets/images/blue/png/CLI%20status%20check.png ">
+                <h3 class="mb-1">No video has been loaded</h3>
+
+                <button onclick="setTab('upload');" class="btn btn-primary my-3">Upload a video</button>
+
+            </div>
+            
+            <button id="addCalibrationStick" class="btn">Add calibration stick</button>
+            <button id="addMass" class="btn">Add point mass</button>
+            <select disabled id="massSelector" class="form-select" aria-label="Mass Selector">
+
+            </select>
+
+            <hr>
+            <div class="mainVideoContainer">
+                <video id="mainVideoDisplay">
+                    <source id="mainVideoDisplaySource">
+                </video>
+                <canvas id="mainVideoCanvas">
+                    
+                </canvas>
+            </div>
+            <hr>
+            <div class="videoControls">
+                <button class="btn">
+                    <svg height="16" class="octicon octicon-pencil" viewBox="0 0 16 16" version="1.1" width="16" aria-hidden="true"><path fill-rule="evenodd" d="M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z"></path></svg>
+                </button>
+            </div>
         </section>
 
         <section class="p-6 main-tab" id="dataTab">
-            <h1>data</h1>
+            <div class="blankslate videoMissing" id="videoFinishedSection">
+                <img class="mb-3" src="https://ghicons.github.com/assets/images/blue/png/CLI%20status%20check.png ">
+                <h3 class="mb-1">No video has been loaded</h3>
+
+                <button onclick="setTab('upload');" class="btn btn-primary my-3">Upload a video</button>
+
+            </div>
+            <table id="dataTable">
+                <tr>
+                    <th>Frame</th>
+                    <th>X</th>
+                    <th>Y</th>
+                </tr>
+            </table>
         </section>
 
         <script src="js/contentDisplay.js"></script>
