beginnings of data output

--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
 
         <script src="js/contentDisplay.js"></script>
         <script src="js/track.js"></script>
+        <script src="js/data.js"></script>
     </body>
 </html>
