add graphing support

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <a onclick="setTab('upload')" id="uploadTabSelector" class="tabnav-tab main-tab-selector" href="#">Select</a>
                     <a disabled onclick="setTab('track')" id="trackTabSelector" class="tabnav-tab main-tab-selector" href="#">Track</a>
                     <a onclick="setTab('data')" id="dataTabSelector" class="tabnav-tab main-tab-selector" href="#">Data</a>
+                    <a onclick="setTab('graph')" id="graphTabSelector" class="tabnav-tab main-tab-selector" href="#">Graph</a>
                 </nav>
             </div>
         </section>
@@ -36,9 +37,13 @@
         {% include upload.html %}
         {% include track.html %}
         {% include data.html %}
+        {% include graph.html %}
 
         <script src="js/track.js"></script>
         <script src="js/data.js"></script>
         <script src="js/contentDisplay.js"></script>
+        <script src="https://www.gstatic.com/charts/loader.js"></script>
+        <script src="js/graph.js"></script>
+
     </body>
 </html>
