--- a/webtrack.html
+++ b/webtrack.html
@@ -1,26 +1,6 @@
 ---
-# empty
+layout: default
 ---
-
-<!DOCTYPE html>
-
-<html data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
-    <head>
-        <title>webtrack</title>
-
-        <link href="https://unpkg.com/@primer/css@^16.0.0/dist/primer.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css" rel="stylesheet">
-
-        <link rel="stylesheet" href="css/main.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    </head>
-
-    <body>
-        <div class="Header">
-            <div class="Header-item">
-                <img src="assets/banner.png" height="32px">
-            </div>
-        </div>
         <br>
         <section>
             <div class="tabnav">
@@ -44,6 +24,3 @@
         <script src="js/contentDisplay.js"></script>
         <script src="https://www.gstatic.com/charts/loader.js"></script>
         <script src="js/graph.js"></script>
-
-    </body>
-</html>
